--- a/04-popup/01-기본/index4.html
+++ b/04-popup/01-기본/index4.html
@@ -30,16 +30,23 @@
       transform: translate(-50%, -50%);
       padding: 60px;
 
-      top: -50%;
+      top: 50%;
       opacity: 0;
       transition: 0.3s cubic-bezier(.92, -0.01, .19, 1.28) 0.4s;
       /* cubic-bezier */
+
+      /* 가려진 팝업창이 마우스와 상관없는 존재가 되게끔 */
+      pointer-events: none;
+      user-select: none;
     }
 
     .popup.active {
-      top: 50%;
+      /* top: 50%; */
       opacity: 1;
+      pointer-events: auto;
+      user-select: auto;
 
+      /* dn은 아예 없는 존재, op0은 투명도만 조절되고 존재는 있음 */
     }
 
     .dim {
@@ -102,7 +109,7 @@
       architecto voluptatem eveniet ipsa aspernatur animi inventore amet sequi
       numquam voluptate asperiores? Odit alias ea non fugiat, qui, provident
       placeat pariatur deleniti saepe, inventore quo iusto et rem quos in
-      harum. Error commodi laudantium optio itaque rem inventore odit dolorum
+      harum. <a href="#">Error commodi</a> laudantium optio itaque rem inventore odit dolorum
       incidunt magni quaerat. Itaque dolores voluptas, praesentium dolorem
       voluptatibus recusandae incidunt tempora vero reprehenderit provident
       ratione ullam quidem distinctio fuga labore consequatur earum sed
