--- a/07-mouse/01-change-cursor/index2.html
+++ b/07-mouse/01-change-cursor/index2.html
@@ -39,10 +39,43 @@
       /* 마우스에 걸리적 거리지 말 것 ->안해주면 진짜 커서 밑에 걸려서 클릭,드래그 안됨*/
       pointer-events: none;
       user-select: none;
+      z-index: 1;
     }
 
     .cursor.click {
       background-position: -33px 0;
+    }
+
+    /* 따라다니는 애 */
+    .spark {
+      position: absolute;
+      top: 0;
+      left: 0;
+      /* 바뀌는 좌표값이 top, left로 들어가기 때문에 ,trft로 위치 조정해줘야 함 */
+      transform: translate(calc(-50% + 6px), calc(-50% + -4px));
+      width: 10px;
+      height: 10px;
+      background: #000;
+      border-radius: 50%;
+      /* 마우스에 걸리적 거리지 말 것 */
+      pointer-events: none;
+      user-select: none;
+
+      transition: 0.4s;
+
+    }
+
+    .spark.active {
+      animation: spark-ani 1s;
+      /* 1초동안 무한반복 */
+    }
+
+    @keyframes spark-ani {
+      100% {
+        width: 70px;
+        height: 70px;
+        opacity: 0;
+      }
     }
   </style>
   <script src="./js/jquery-3.3.1.min.js"></script>
@@ -52,6 +85,7 @@
       //대상을 변수에 저장
       const $window = $(window);
       const $cursor = $('.cursor');
+      const $spark = $('.spark');
       //브라우저 창에서 마우스가 움직일 때
       $window.on('mousemove', function (e) {
         // console.log(e);
@@ -59,22 +93,34 @@
         const mouseX = e.pageX;
         const mouseY = e.pageY;
         //가짜 마우스의 left, top값으로 적용
-        $cursor.css({
+        $cursor.add($spark).css({
           left: mouseX,
           top: mouseY
-        })
+        });
+        // add() :선택자 추가
       });
 
       //event : mousedown, mouseup
       //마우스를 누르면 click클래스 부여
       $window.on('mousedown', function () {
         $cursor.addClass('click');
+
       });
       //떼면 click클래스 삭제
       $window.on('mouseup', function () {
         $cursor.removeClass('click');
+
       });
-    })
+      //화면을 클릭하면 spark에 active클래스 부여
+      $window.on('click', function () {
+        $spark.addClass('active');
+
+        setTimeout(function () {
+          $spark.removeClass('active');
+        }, 1000);
+        // 클릭 애니메이션이 1초라 1000
+      });
+    });
   </script>
 
 
@@ -82,6 +128,7 @@
 
 <body>
   <div class="cursor"></div>
+  <div class="spark"></div>
 
   <div class="wrap">
     <p>
