--- a/plug-in/02-fullpage/index.html
+++ b/plug-in/02-fullpage/index.html
@@ -8,9 +8,11 @@
   <title>fullpage.js</title>
   <!-- 우리 파일보다 항상 먼저 호출 (명령 변경하고 싶을 때 덮기 편하기 때문에) -->
   <link rel="stylesheet" href="./css/jquery.fullpage.min.css">
+  <link rel="stylesheet" href="./css/aos.css">
   <link rel="stylesheet" href="./css/style.css">
   <script src="./js/jquery-3.3.1.min.js"></script>
   <script src="./js/jquery.fullpage.min.js"></script>
+  <script src="./js/aos.js"></script>
   <script src="./js/script.js"></script>
 
 </head>
@@ -45,7 +47,7 @@
     <section class="section section1">
       <!-- 자동으로 사이에 div 생성됨..
       td(display:table-cell)는 vertical-align: middle 가능 -->
-      <h2>section1</h2>
+      <h2 data-aos="fade-up">section1</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus distinctio ullam quod laborum possimus ad
         officia magni totam molestiae delectus aliquam, unde consectetur? Adipisci tenetur facere eligendi sequi quam,
         alias
@@ -60,7 +62,7 @@
     </section>
 
     <section class="section section2">
-      <h2>section2</h2>
+      <h2 data-aos="fade-up">section2</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet nostrum necessitatibus quaerat eaque obcaecati
         ducimus dicta, laborum quae assumenda, distinctio eius, iste perferendis ut optio sunt! Eos obcaecati, nesciunt
         exercitationem reprehenderit voluptatem est suscipit, recusandae soluta molestiae ducimus excepturi! Minima
@@ -76,7 +78,7 @@
     </section>
 
     <section class=" section section3">
-      <h2>section3</h2>
+      <h2 data-aos="fade-up">section3</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore excepturi iure officia ipsum vitae unde nulla
         impedit nam repudiandae, est reiciendis nisi! Illum, harum expedita. Adipisci optio sint temporibus quas
         architecto,
@@ -90,8 +92,9 @@
     </section>
 
     <section class="section section4">
-      <h2>section4</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam, voluptatum praesentium. Dolores in delectus
+      <h2 data-aos="fade-up">section4</h2>
+      <p data-aos="fade-up" data-aos-delay="300">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam,
+        voluptatum praesentium. Dolores in delectus
         labore at possimus doloribus, blanditiis consectetur laborum amet modi voluptatum dicta! Accusamus, inventore
         eligendi quo maxime odio officia possimus qui dicta dignissimos consequatur praesentium voluptatibus velit porro
         magnam enim doloribus commodi. Nobis soluta facere quaerat sunt excepturi reiciendis rem dolores cumque ducimus
