풀페이지 푸터

--- a/plug-in/02-fullpage/index.html
+++ b/plug-in/02-fullpage/index.html
@@ -104,9 +104,10 @@
         fugit
         totam.</p>
     </section>
+    <!-- fp-auto-height: 풀페이지 동작 벗어나고 싶을 때 (화면 꽉차는 동작.. -->
+    <div id="footer" class="section footer fp-auto-height">잘 살아보세!</div>
   </main>
 
-  <footer id="footer">잘 살아보세!</footer>
 
   <button type="button" class="btn-top">TOP</button>
 </body>
