--- a/09-loading/02-스피너.html
+++ b/09-loading/02-스피너.html
@@ -6,14 +6,174 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>loading</title>
+  <style>
+    *,
+    *::before,
+    *::after {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    .loading {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: rgba(0, 0, 0, 0.7);
+
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      pointer-events: none;
+      user-select: none;
+    }
+
+    .loading p {
+      font-size: 4vw;
+      color: #fff;
+    }
+
+    .sk-chase {
+      width: 40px;
+      height: 40px;
+      position: relative;
+      animation: sk-chase 2.5s infinite linear both;
+    }
+
+    .sk-chase-dot {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      left: 0;
+      top: 0;
+      animation: sk-chase-dot 2.0s infinite ease-in-out both;
+    }
+
+    .sk-chase-dot:before {
+      content: '';
+      display: block;
+      width: 25%;
+      height: 25%;
+      background-color: #fff;
+      border-radius: 100%;
+      animation: sk-chase-dot-before 2.0s infinite ease-in-out both;
+    }
+
+    .sk-chase-dot:nth-child(1) {
+      animation-delay: -1.1s;
+    }
+
+    .sk-chase-dot:nth-child(2) {
+      animation-delay: -1.0s;
+    }
+
+    .sk-chase-dot:nth-child(3) {
+      animation-delay: -0.9s;
+    }
+
+    .sk-chase-dot:nth-child(4) {
+      animation-delay: -0.8s;
+    }
+
+    .sk-chase-dot:nth-child(5) {
+      animation-delay: -0.7s;
+    }
+
+    .sk-chase-dot:nth-child(6) {
+      animation-delay: -0.6s;
+    }
+
+    .sk-chase-dot:nth-child(1):before {
+      animation-delay: -1.1s;
+    }
+
+    .sk-chase-dot:nth-child(2):before {
+      animation-delay: -1.0s;
+    }
+
+    .sk-chase-dot:nth-child(3):before {
+      animation-delay: -0.9s;
+    }
+
+    .sk-chase-dot:nth-child(4):before {
+      animation-delay: -0.8s;
+    }
+
+    .sk-chase-dot:nth-child(5):before {
+      animation-delay: -0.7s;
+    }
+
+    .sk-chase-dot:nth-child(6):before {
+      animation-delay: -0.6s;
+    }
+
+    @keyframes sk-chase {
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+
+    @keyframes sk-chase-dot {
+
+      80%,
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+
+    @keyframes sk-chase-dot-before {
+      50% {
+        transform: scale(0.4);
+      }
+
+      100%,
+      0% {
+        transform: scale(1.0);
+      }
+    }
+  </style>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script>
+    $(function () {
+      const $window = $(window);
+      const $body = $('body');
+      //`쓰면 문자열 줄바뀌어도 오류 안남
+      let $loading = `<div class="loading">
+                         <div class="sk-chase">
+                            <div class="sk-chase-dot"></div>
+                            <div class="sk-chase-dot"></div>
+                            <div class="sk-chase-dot"></div>
+                            <div class="sk-chase-dot"></div>
+                            <div class="sk-chase-dot"></div>
+                            <div class="sk-chase-dot"></div>
+                          </div>
+                        </div>`;
+
+      //loading 구조 삽입
+      $body.append($loading);
+
+      //jQuery 객체로 만들기
+      $loading = $('.loading');
+
+      $window.on('load', function () {
+        //로딩 완료 후 1초 뒤에 사라지게
+        setTimeout(function () {
+          $loading.fadeOut();
+        }, 1000);
 
 
+      })
+    })
+  </script>
 </head>
 
 <body>
-  <div class="loading">
+  <!-- <div class="loading">
     <p>loading...</p>
-  </div>
+  </div> -->
 
   <img src="https://media.timeout.com/images/105918414/image.jpg" alt="" />
   <img src="https://hips.hearstapps.com/hmg-prod/images/gettyimages-1136588786.jpg" alt="" />
